<resources>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyD4jMiTOOUeqjggmcITi_A-lyPwnMOG5tY
    </string>

    <string name="app_name">PetFinderApp_Kotlin</string>
    <string name="hello_world">Hello World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up">Sign Up?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in">Sign In?</string>
    <string name="small_furry"><![CDATA[Small & Furry]]></string>
    <string name="pet_category_one">Dog</string>
    <string name="pet_category_two">Cat</string>
    <string name="pet_category_three">Rabbit</string>
    <string name="pet_category_four"><![CDATA[Small & Furry]]></string>
    <string name="pet_category_five">Horse</string>
    <string name="pet_category_six">Bird</string>
    <string name="pet_category_seven"><![CDATA[Scales, Fins & Other]]></string>
    <string name="pet_category_eight">Barnyard</string>
    <string name="animal_id">Animal ID</string>
    <string name="animal_name">Animal Name</string>
    <string name="animal_type">Animal Type</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="your_name">Your Name</string>
    <string name="your_username">Your UserName</string>
    <string name="your_email">Your Email</string>
    <string name="logout">Logout</string>
</resources>